Fix layout issues and add actionLinks

--- a/src/components/InfoPanel/InfoPanel.module.scss
+++ b/src/components/InfoPanel/InfoPanel.module.scss
@@ -44,8 +44,11 @@
   }
 }
 
-.InfoPanelTable {
+.TableWrap {
   width: 59%;
+}
+
+.InfoPanelTable {
   border-collapse: collapse;
 
   + .InfoPanelTable {
